# Note-for-Common-Libraries

./: set_operation  update.sh
2018.07 study of software engineering/: README.MD
Armadillo/: README.MD
Boost/: README.MD
CGAL/: README.MD
Ceres/: README.MD
Colmap/: README.MD
Common Point Cloud Library/: README.MD
Cpp & Python/: Python2Cpp.MD
Cython/: README.MD
Deeplab V3/: README.MD
Eigen/: README.MD
Meshlab/: README.MD
Note python-pcl/: README.MD
Note_Boost/: README.MD
Note_Ceres/: README.MD
Note_Eigen/: README.MD
Note_Mask_RCNN/: README.MD
Note_Mathematics/: README.MD
Note_Omp/: README.MD
Note_OpenCV/: README.md
Note_OpenGL/: README.md  README.md~
Note_PCL/: MANUAL.MD  README.MD  README.MD~  Readme.md
Note_Physics/: Physicist.MD
Note_Python/: README.MD
Note_QT/: README.MD
Note_Resume/: README.MD
Note_SVN/: README.MD
Note_Shadowsocks/: REAMD.MD
Note_VTK/: README.MD
Note_blending_c++_matlab/: README.MD
Note_cgal/: README.MD
Note_open3d/: README.MD
OpenCV/: README.md
OpenGL/: 01 common question.md  README.md
OpenGL_LESSONS/: README.md
OpenGL_LESSONS/lesson1/: CMakeLists.txt  main.cpp
OpenGL_LESSONS/lesson1/.kdev4/: lesson1.kdev4
PCL/: 01 Installation from source code.MD  README.MD  installation_way01_source_code.md
PyTorch/: Lesson 01 Installation.MD  Lesson 02 Tensor.MD  Lesson 04 gradient_advance.MD  Lesson 05 example.MD  Lesson 06 network.MD  Lesson 07 network summary.MD  README.MD
Python/: 00 Installation and Basic.MD  01 Python call cpp.MD  02 dictionary key to multi-values.MD  README.MD
(+27 files in other folders)
